# Alfis

./: .gitignore  ALFIS_APP_README.md  APPLE_SILICON_PATCH.md  Cargo.toml  PKGBUILD  PR_DESCRIPTION.md  README.md  adblock.txt  alfis.cfg  alfis.toml  build.rs  flake.nix  other-tlds.txt  rustfmt.toml  shell.nix
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflows/: docker.yml  rust_build_and_test.yml  rust_create_release.yml  rust_parallel_release.yml  test.yml
ALFIS.app/Contents/: Info.plist
ALFIS.app/Contents/MacOS/: ALFIS  alfis-background  alfis-binary  alfis-dock  alfis-dock-app  alfis-service  alfis-simple  alfis-tray  alfis-tray-app  alfis-tray.scpt
ALFIS.app/Contents/Resources/: alfis.icns
contrib/: PKGBUILD  org.alfis.Alfis.desktop
contrib/deb/: generate.sh
contrib/docker/: Dockerfile  Dockerfile.alpine  Makefile  Read.me  alfis.toml
contrib/router/: S98alfis  upgrade_alfis.sh
contrib/semver/: name.sh  version.sh
contrib/systemd/: alfis-default-config.service  alfis.service  alfis.sysusers  alfis.tmpfiles
contrib/windows/: alfis_ie10.reg
docs/: about_ru.md  faq_ru.md
docs/rfc/: 0001-emergency-signers-ru.md  0001-emergency-signers.md  0002-healing-signatures-ru.md  0002-healing-signatures.md  0003-dead-key-exclusion-ru.md  0003-dead-key-exclusion.md
examples/: ban_check.rs
logo/: README.md  src.ai
src/: actions.rs  block.rs  blockchain.rs  bulma.css  bytes.rs  context.rs  dns_utils.rs  event.rs  hash.rs  iana.rs  index.html  keys.rs  keystore.rs  lib.rs  loader.css  main.rs  miner.rs  scripts.js  ser.rs  settings.rs  simplebus.rs  styles.css  transaction.rs  utils.rs  web_server.rs  web_ui.rs  win_service.rs  x_zones.rs
src/blockchain/: block.rs  blockchain.rs  chain.rs  compact.rs  constants.rs  enums.rs  filter.rs  hash_utils.rs  mod.rs  transaction.rs  types.rs
src/blockchain/data/: create_db.sql  zones.txt
src/blockchain/sql/: create_db.sql
src/codec/: filter.rs  mod.rs  proquint.rs  syllabic.rs
src/commons/: constants.rs  eventbus.rs  mod.rs  rtt_tracker.rs  simplebus.rs  status.rs
src/crypto/: chacha.rs  crypto_box.rs  mod.rs
src/dns/: authority.rs  buffer.rs  cache.rs  client.rs  context.rs  filter.rs  hosts.rs  mod.rs  netutil.rs  protocol.rs  resolve.rs  server.rs
src/p2p/: message.rs  mod.rs  network.rs  peer.rs  peers.rs  state.rs  version.rs
src/ui/: actions.rs  dialogs.rs  domain_dialog.xml  events.rs  main.xml  mod.rs  record_dialog.xml  state.rs  toasts.rs
src/webui/: api.rs  auth.rs  events.rs  mod.rs
src/webui/assets/: bulma.css  busy_indicator.css  index.html  scripts.js  styles.css
src/webview/: bulma.css  busy_indicator.css  index.html  miner.css  scripts.js  styles.css
tests/: blockchain.db
