[package]
name = "alfis"
version = "0.9.1"
authors = ["Revertron <alfis@revertron.com>"]
edition = "2021"
build = "build.rs"
readme = "README.md"
homepage = "https://alfis.name"
repository = "https://github.com/Revertron/Alfis"
keywords = ["p2p", "mesh", "dns", "blockchain", "yggdrasil"]
exclude = ["blockchain.db", "alfis.toml"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0.2.24"
log = "0.4.33"
simplelog = "0.12.2"
toml = "1.1.2"
sha2 = "0.11.0"
ed25519-dalek = "3.0.0"
x25519-dalek = { version = "3.0.0", features = ["reusable_secrets"] }
ecies-ed25519-rev = "0.5.4"
chacha20poly1305 = "0.11.0"
blakeout = "0.3.0"
num_cpus = "1.17.0"
byteorder = "1.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11.2"
num-bigint = "0.5.1"
chrono = { version = "0.4.42", features = ["serde"] }
time = "0.3.44"
rand = { version = "0.10.2" }
sqlite = "0.37.0"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
mio = { version = "1.2", features = ["os-poll", "net"] }
ureq = { version = "3.1.4", optional = true }
lru = "0.18"
derive_more = { version = "2.0.1", features = ["display", "error", "from"] }
lazy_static = "1.5.0"
spmc = "0.3.0"
thread-priority = "3.0.0"

# Optional dependencies regulated by features
lumio-gui = { version="0.1", optional = true, default-features = false, features = ["backend-gl"] }
tinyfiledialogs = { version = "3.9.1", optional = true }
open = { version = "5.4.0", optional = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["impl-default", "wincon", "shellscalingapi"] }
windows-service = "0.8.0"
# System tray icon (Windows only; gated in code by the `gui` feature + cfg(windows)).
# Not listed in the `gui` feature: a target-scoped optional dep referenced by
# an all-targets feature would break non-Windows builds.
tray-icon = "0.24"

[build-dependencies]
winres = "0.1.12"

[profile.release]
opt-level = 3
lto = true
strip = true  # Automatically strip symbols from the binary.

[profile.dev]
opt-level = 1

[profile.test]
opt-level = 2

[package.metadata.winres]
ProductName="ALFIS"
FileDescription="Alternative Free Identity System"

[features]
gui = ["lumio-gui", "tinyfiledialogs", "open"]
doh = ["ureq"]
default = ["gui", "doh"]
